Improve readability, fix flashes, add portfolio

--- a/public/sty1.css
+++ b/public/sty1.css
@@ -1,33 +1,4 @@
-@font-face {
-font-family: 'Century Gothic Regular';
-font-style: normal;
-font-weight: normal;
-src: local('Century Gothic Regular'), url('GOTHIC.woff') format('woff');
-}
 
-
-@font-face {
-font-family: 'Century Gothic Italic';
-font-style: normal;
-font-weight: normal;
-src: local('Century Gothic Italic'), url('GOTHICI.woff') format('woff');
-}
-
-
-@font-face {
-font-family: 'Century Gothic Bold';
-font-style: normal;
-font-weight: normal;
-src: local('Century Gothic Bold'), url('GOTHICB.woff') format('woff');
-}
-
-
-@font-face {
-font-family: 'Century Gothic Bold Italic';
-font-style: normal;
-font-weight: normal;
-src: local('Century Gothic Bold Italic'), url('GOTHICBI.woff') format('woff');
-}
 /*reset*/
 html, body, div, span,
 h1, h2, h3, h4, h5, h6, p,
@@ -57,7 +28,10 @@ body {
 ol, ul {
 	list-style: none;
 }
-
+p, h2, h3{
+font-style: normal;
+color: #fff;
+}
 
 .container{
     display:flex;
@@ -65,7 +39,7 @@ ol, ul {
     justify-content:space-around;
     background-image:url("./backgrounds/background-8.jpg");
     background-repeat:no-repeat;
-   
+    background-attachment:fixed;
 }
 hr{
 border-top:2px solid #3b4357;
@@ -75,63 +49,66 @@ border-bottom:0px;
 }
 .tapestry{
 flex:0 1 440px;
-font-family: 'Century Gothic Regular';
+font-family: 'Lato', 'Open Sans', sans-serif;
 padding-top:65px;
 padding-right:10px;
 padding-left:10px;
 border-right:3px solid #242e4d;
 border-left:3px solid #242e4d;
 margin-rigt:-10px;
-background-image:url("./backgrounds/background-1.jpg");
+background-image:url("./backgrounds/background-2.jpg");
 background-repeat:no-repeat;
+background-size:cover;
 color:#fff;
 font-weight:400;
 }
 .title{
 text-align:center;
-font-size:25px;
+font-size:28px;
 margin:5px;
 }
 .subtitle{
 text-align:center;
-font-size:18px;
+font-size:20px;
 padding:5px 5px 7px 5px;
 }
 .main-text{
 text-align:left;
-font-size:14px;
 padding:10px;
-line-height:1.5
+font-size:16px;
+font-weight:400;
+line-height:28px;
 }
 .main-text-eng{
 text-align:justify;
-font-size:14px;
 padding:10px;
-line-height:1.5;
+font-size: 16px;
+font-weight: 400;
+line-height:28px;
 }
 
 .heading{
-font-size:18px;
+font-size:20px;
 text-align:center;
 padding:15px 5px 7px 5px;
 }
 .heading-2{
-font-size:18px;
+font-size:20px;
 text-align:left;
 padding:15px 5px 7px 5px;
 }
 .abstract{
 text-align:left;
-font-size:12px;
+font-size:14px;
 margin:5px;
 }
 .feature-text{
 text-align:left;
-font-size:12px;
+font-size:14px;
 margin:7px;
 }
 .feature-heading{
-font-size:17px;
+font-size:18px;
 text-align:left;
 margin:7px;
 }
@@ -152,6 +129,11 @@ display:flex;
 flex-flow:row wrap;
 padding-top:15px;
 }
+.items{
+display:flex;
+flex-flow:column wrap;
+padding-top:15px;
+}
 .feature-card{
 display:flex;
 flex-direction:row;
@@ -164,18 +146,73 @@ width:40px;
 padding:7px 5px 7px 7px;
 box-sizing:border-box;
 }
+.item-icon{
+height:50px;
+width:50px;
+padding:7px 5px 7px 7px;
+box-sizing:border-box;
+}
 .hero{
 flex:0 4 300px;
 }
+@media screen and (max-width:440px){
+.hero{
+display:none;
+}
+}
 a{
 text-decoration:none;
-color:#fff;
 cursor:pointer;
+color:#fff;
+}
+a.feature-card:visited .feature-heading{
+color:#ffb;
+}
+a.feature-card:visited .feature-text{
+color:#ffb;
+}
+a.feature-card:hover .feature-caption{
+text-shadow:3px 1px 3px gray;
+}
+a.feature-card:active .feature-heading{
+color:#fc4;
+}
+a.feature-card:focus .feature-heading{
+color:#fc4;
+}
+a.feature-card:active .feature-text{
+color:#fc4;
+}
+a.feature-card:focus .feature-text{
+color:#fc4;
+}
+.inline-link{
+border-bottom:1px solid #fff;
+border-radius:1px;
+}
+.inline-link:visited{
+border-bottom:1px solid #ff8;
+}
+.inline-link:hover{
+border-bottom:1px solid #fc4;
+text-shadow:3px 1px 3px gray;
+}
+.inline-link:active{
+border-bottom:1px solid #fc4;
+}
+.inline-link:focus{
+border-bottom:1px solid #fc4;
 }
 .link-text{
 display:none;
 }
-
+a:visited .link-text{
+display:none;
+}
+a:visited .social-icon{
+display:block;
+color:#fff;
+}
 a:hover .link-text{
 display:block;
 color:#fff;
@@ -197,6 +234,7 @@ color:#fff;
 a:focus .social-icon{
 display:none;
 }
+
 .lang-en{
 display:flex;
 justify-content:center;
